kubernetes/rbac_rules_namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: myapp-namespace
